welcome.lessons.welcome.bat.bool2.AnswerCell.scala.error
answerCell:3: error: 'case' expected but 'false' found.
		false,_,false		=> true
                ^answerCell:4: error: '}' expected but ';' found.
		false,_,true		=> false
^answerCell:4: error: ';' expected but ',' found.
		false,_,true		=> false
                     ^answerCell:5: error: ';' expected but ',' found.
		true,true,false 	=> true
                    ^answerCell:6: error: ';' expected but ',' found.
		true,false,_		=> false
                    ^answerCell:7: error: ';' expected but ',' found.
		_,_,_			=> false
                 ^answerCell:11: error: eof expected but '}' found.
 }
 ^