welcome.lessons.welcome.bat.bool2.AnswerCell.scala.code
def answerCell(isMorning:Boolean, isMom:Boolean, isAsleep:Boolean):Boolean = {
	(isMorning,isMom,isAsleep) match {
		false,_,false		=> true
		false,_,true		=> false
		true,true,false 	=> true
		true,false,_		=> false
		_,_,_			=> false
	}
}
